chart move and overlap fixes

--- a/src/app/svgchart/svgchart.component.scss
+++ b/src/app/svgchart/svgchart.component.scss
@@ -64,3 +64,7 @@
   font-size: 20px;
   fill: gray;
 }
+
+.svg {
+  user-select: none;
+}
